--- a/dogs.html
+++ b/dogs.html
@@ -3,7 +3,26 @@
     <head>
         <title>Dogs are Better Argument</title>
         <style>
-            <link rel="stylesheet"type="text/css"href="css/stylesheet.css">
+           body{
+        text-align: center;
+        margin: 5%;
+ }
+
+body,html{
+    height: 100%;
+    background-color: antiquewhite;
+    }
+
+h1{
+        text-align: center;
+        color: darkred;
+        margin: 5%;
+    }
+h2{
+        background-color: darksalmon;
+            }
+h3{     background-color: azure;
+            }
         </style>
     </head>
 
@@ -11,6 +30,7 @@
         <h1><u>Dog Arguments</u></h1>
          <a href="https://www.instagram.com/twopigsandahorse/" target="_blank"><img src="images/doggo4.jpg" alt="@twopigsandahorse" style="width: 300px">
             </a>
+        <h3><u><b>PRO</b></u></h3>
         <p><a href="http://www.businessinsider.com/11-reasons-dogs-are-better-than-cats-2014-4" target="_blank">Business Insider</a> says they have 11 scientific reasons why dogs are better than cats. Have a look!
         </p>
             <ul>
@@ -18,6 +38,7 @@
                 <li>Dogs keep us fit.</li>
                 <Li>Dogs are real-life heroes.</Li>
             </ul>
+        <br>
         <p><a href="https://www.cheatsheet.com/culture/indisputable-reasons-why-dogs-are-better-than-cats.html/?a=viewall" target="_blank">Cheatsheet.com</a> also has quite a bit to say with their article title "Indisputable Reasons Why Dogs Are Better Than Cats"
         </p>
             <ul>
@@ -27,9 +48,27 @@
             </ul>
         <p><a href="https://www.instagram.com/dogsofinstagram/"target="_blank">@dogsofinstagram</a> is a great instagram to discover dogs to follow.
         </p>
-        <p>Now go read what they have to say about <a href="cats.html" target="_blank">cats</a>!
+        <h2><u><b>CON</b></u></h2>
+        <p><a href="https://www.theodysseyonline.com/11-pros-and-cons-to-owning-dog?sec=pop24&utm_expid=.53hHQ_sIS_GVYl9TPM4psw.1&utm_referrer=https%3A%2F%2Fwww.google.com%2F" target="_blank">Odyssey</a> has a couple of negative facts and positive for dogs, but here are some negative ones.
         </p>
-        <p><a href="index.html" target="_blank">MAIN PAGE</a></p>
+            <ul>
+                <li>They require training. Lots of training</li>
+                <li>Money, money, and more money</li>
+                <Li>You have to make special arrangements for them when traveling.(this is true for cats as well)</Li>
+            </ul>
+        <br>
+        <p>An article on <a href="https://pethelpful.com/dogs/The-Advantages-and-Disadvantages-of-Having-a-Dog" target="_blank">Pethelpful</a> say both the pros and cons of dogs, but here are some of the cons.
+        </p>
+            <ul>
+                <li>Time commitment.</li>
+                <li>Be aware that whenever you go on a trip, even if it is only for a couple days, you will need someone to watch your dog. </li>
+                <Li>Cost.</Li>
+            </ul>
+        
+        <p><b>Now go read what they have to say about <a href="cats.html" target="_self">cats</a>!
+            </b></p>
+        <p><a href="index.html" target="_self">MAIN PAGE</a></p>
+        <br>
     </body>
 
 </html>
