--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
     <head>
         <title>Are Dogs Better Than Cats?</title>
         <style>
-            <link rel="stylesheet"type="text/css"href="css/stylesheet.css">
+            body{
+        text-align: center;
+        margin: 5%;
+ }
+
+body,html{
+    height: 100%;
+    background-color: antiquewhite;
+    }
+
+h1{
+        text-align: center;
+        color: maroon;
+        margin: 5%;
+    }
         </style>
         
     </head>
@@ -25,9 +39,11 @@
             </a>
             <a href="https://www.instagram.com/mavtheaussie/" target="_blank"><img src="images/doggo3.jpg" alt="@mavtheaussie" style="width: 300px">
             </a>
-            <p>This is the argument for <a href="cats.html" target="_blank">cats</a>.</p>
-            <p>This is the argument for <a href="dogs.html" target="_blank">dogs</a>.</p>
+            <p>This is the argument for <a href="cats.html" target="_self">cats</a>.</p>
+            <p>This is the argument for <a href="dogs.html" target="_self">dogs</a>.</p>
             <p><b>Now its time for YOU to pick which is better. Cats or Dogs?</b></p>
+            <br>
+            <p><a href="info.html" target="_blank">INFO PAGE</a></p>
         </body>
 
 </html>
